Fix weird issue with codemirror editor alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,9 +135,6 @@ body {
 
 .CodeMirror {
   padding-left: 8px;
-  margin-bottom: 15px;
-  margin-left: -15px;
-  margin-right: -15px;
 }
 
 .spinner {
